[tool.poetry]
name = "jogo"
version = "0.1.0"
description = ""
authors = ["zen3t <josealvess6154@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
pyright = "^1.1.374"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
